<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#305c45"
    tools:context=".view.fragments.studentFragments.AccountStudentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/id_account_teacher_cs"
        android:background="#3c9867"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:background="@drawable/image_account"
            app:layout_constraintEnd_toStartOf="@id/id_account_tv_last_name"
            android:id="@+id/id_account_iv_photo"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/id_account_tv_status"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:enabled="false"
            android:background="@drawable/background_tv_name"
            app:layout_constraintBottom_toTopOf="@id/id_account_tv_first_name"
            android:id="@+id/id_account_tv_last_name"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/id_account_iv_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:enabled="false"
            android:background="@drawable/background_tv_name"
            app:layout_constraintBottom_toTopOf="@id/id_account_button_redact"
            android:id="@+id/id_account_tv_first_name"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/id_account_iv_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_account_tv_last_name"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/id_account_button_redact"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            style="@style/LoginButtonMenuStyle"
            android:text="@string/title_text_account_teacher_2"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="11sp"
            app:layout_constraintWidth_percent="0.28"
            app:layout_constraintHeight_percent="0.14"
            app:layout_constraintEnd_toEndOf="@id/id_account_tv_first_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_account_tv_first_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="Ученик"
            android:textSize="20sp"
            android:background="@drawable/background_tv_2"
            android:id="@+id/id_account_tv_status"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="@id/id_account_iv_photo"
            app:layout_constraintEnd_toEndOf="@id/id_account_iv_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_account_iv_photo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/id_account_teacher_cs"
        app:layout_constraintBottom_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="@id/id_account_tv_title_1"
            app:layout_constraintBottom_toBottomOf="@id/id_account_tv_title_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/id_account_tv_title_1"/>

        <TextView
            android:id="@+id/id_account_tv_title_1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/title_text_account_teacher_1"
            android:textStyle="italic"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            app:layout_constraintWidth_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="@id/id_account_tv_title_1"
            app:layout_constraintBottom_toBottomOf="@id/id_account_tv_title_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/id_account_tv_title_1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:enabled="false"
            android:textSize="17sp"
            android:padding="12sp"
            android:background="@drawable/background_cs_login_white"
            android:hint="@string/title_text_account_teacher_4"
            android:textStyle="italic|bold"
            android:textColor="@color/white"
            android:textColorHint="#313331"
            android:id="@+id/id_account_tv_my_desc"
            app:layout_constraintTop_toBottomOf="@id/id_account_tv_title_1"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/title_text_account_teacher_3"
            android:layout_height="24dp"
            android:textSize="14sp"
            style="@style/LoginButtonMenuStyle"
            android:layout_marginTop="5dp"
            android:id="@+id/id_account_tv_redact_desc"
            app:layout_constraintWidth_percent="0.22"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_account_tv_my_desc"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:text="настройки"
            android:textStyle="bold"
            android:id="@+id/id_account_button_settings"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            style="@style/LoginButtonMenuStyle"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_account_tv_redact_desc"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>